--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,8 +28,8 @@ body{
     margin-left:30px;
     margin-top:4px;
 }
-.custom-btn, .custom-form-control{
-    border: 1px solid #EBEBEB;
+.custom-btn,.custom-navbar .container  .custom-form-control{
+    border: 1px solid #EBEBEB !important;
     box-shadow: none ;
     border-radius: 2px;
     font-size: 14px;
@@ -197,7 +197,7 @@ body{
 }
 .custom-carousel-indicators-primary{
     top:235px;
-    right:33% !important;
+    right:40% !important;
 }
 .custom-carousel-indicators-primary img{
     height:75px;
@@ -375,4 +375,246 @@ h3.custom-heading{
 #row-brands h3.custom-heading{
     border-top:1px solid #eef0ea;
     padding-top:25px;
+}
+
+/* تذييل الصفحة  */
+#brand-logos{
+    background-color:#dbeefa;
+    width: 100%;
+    padding:25px 0;
+    color:#555555;
+}
+#brand-logos img{
+    margin-left:25px;
+    margin-right:25px;
+    max-height:100px;
+    max-width:100px;
+}
+#footer-nav{
+    width: 100%;
+    background-color:#1f1e1e;
+    padding:50px 0 40px;
+    background-image:url(../images/bg_footer_1.png) , url(../images/bg_footer_2.png);
+    background-repeat:no-repeat,no-repeat;
+    background-position:110% 0,-10% -150%;
+}
+#footer-nav-links{
+    margin:30px 0;
+}
+#footer-nav-links a{
+    color:#555555;
+    margin-left:30px;
+    font-weight:700;
+}
+#footer-nav-links a:hover{
+    text-decoration:none;
+}
+#footer-nav form{
+    max-width:260px;
+    margin:auto;
+}
+input[type=email], input[type=number]{
+    direction:rtl;
+    text-align:right;
+}
+#footer-nav #newsletter{
+    border-top:1px solid #292929;
+}
+#footer-nav form label{
+    margin:27px 0 16px;
+    font-size:12px;
+    font-weight:700;
+    color:#555555;
+}
+
+
+.btn-primary{
+    color:#212529;
+    background-color:#f8ad47 !important;
+    border-color:#f8ad47 !important;
+}
+.btn-primary.focus,
+.btn-primary:focus,
+.btn-primary:hover{
+    color:#212529;
+    background-color:#f79d22;
+    border-color:#f69716;
+}
+.btn-primary.focus,
+.btn-primary:focus{
+    box-shadow:0 0 0 .2rem rgba(216,153,67,.5);
+}
+.btn-primary.disabled,
+.btn-primary:disabled{
+    color:#212529;
+    background-color:#f8ad47;
+    border-color:#f8ad47;
+}
+.btn-primary:not(:disabled):not(.disabled).active,
+.btn-primary:not(:disabled):not(.disabled):active,
+.show>.btn-primary.dropdown-toggle{
+    color:#212529;
+    background-color:#f69716;
+    border-color:#f6920a;
+}
+.btn-primary:not(:disabled):not(.disabled).active:focus,
+.btn-primary:not(:disabled):not(.disabled):active:focus,
+.show>.btn-primary.dropdown-toggle:focus{
+    box-shadow:0 0 0 .2rem rgba(216,153,67,.5);
+}
+#newsletter form input{
+    background-color:#313131;
+    opacity:.6;
+    border:none;
+    height:38px;
+}
+#newsletter form button{
+    border-radius:0;
+    border-top-left-radius:3px;
+    border-bottom-left-radius:3px;
+    font-size:14px;
+    padding:6px 12px 5px;
+    color:inherit;
+    height:38px;
+}
+#footer-copyright-social{
+    background-color:#151515;
+    color:#303030;
+    padding-top:30px;
+    padding-bottom:30px;
+    font-weight:700;
+}
+#footer-copyright-social a{
+    color:#303030;
+    margin-left:5px;
+    margin-right:5px;
+}
+
+
+@media (max-width:1200px){
+    .custom-navbar .navbar-nav li a.nav-link{
+        padding: 7px;
+    }
+}
+
+@media (max-width:991px){
+    .custom-navbar{
+        padding:15px 20px 30px;
+    }
+    .custom-navbar .container{
+        max-width:100%;
+    }
+    .navbar-header{
+        display:block;
+        width:100%;
+        margin-bottom:22px;
+    }
+    .navbar-header .btn-icon{
+        float:left;
+    }
+    .custom-navbar .form-inline{
+        width:100%;
+        border-top:1px solid #eee;
+        border-bottom:1px solid #eee;
+        padding:10px 0;
+    }
+    .custom-navbar .form-inline .dropdown{
+        display:none;
+    }
+    .custom-navbar .form-inline .custom-form-control{
+        width:90%;
+    }
+    .custom-navbar .form-inline .search-btn{
+        width:10%;
+        margin-left: 0;
+    }
+    .custom-navbar a.btn-icon,
+    .custom-navbar .btn-icon{
+        padding:5px 10px 4px;
+        color:#777;
+        border:1px solid #ddd;
+        background-color:transparent;
+        border-radius:2px;
+        font-size:18px;
+    }
+    .navbar-header .btn-icon i{
+        font-size:19px;
+        font-weight:700;
+    }
+    .custom-navbar .navbar-nav li a.nav-link{
+        padding:10px 15px;
+    }
+    .navbar-collapse{
+        border-top:1px solid #eee;
+        margin-top:15px;
+        padding-top:8px;
+    }
+    #carousel-featured .carousel-indicators{
+        margin-right:5%;
+        margin-left:0;
+    }
+    .overlay{
+        display:none;
+    }
+    .custom-thumbnail .add-to-cart-btn{
+        color:#868686;
+        font-weight:400;
+    }
+    #copyright,#social-icons{
+        width:100%;
+        text-align:center;
+    }
+    #social-icons{
+        font-size:150%;
+        margin-top:10px;
+    }
+}
+
+@media (max-width:991px) and (min-width:768px){
+    .custom-thumbnail img{
+        height:200px;
+    }
+}
+
+@media (max-width:767px){
+    #carousel-featured,#carousel-featured .product-details{
+        height:auto;
+    }
+    #carousel-featured .product-details{
+        position:static;
+        text-align:center;
+    }
+    #carousel-featured{
+        padding-bottom:25px;
+    }
+    #carousel-featured .carousel-item img{
+        height:250px;
+    }
+    #brand-logos img{
+        max-height:50px;
+        max-width:50px;
+        margin:5px 24px 5px 23px;
+    }
+    #footer-nav .footer-logo{
+        margin-bottom:30px;
+    }
+    #footer-nav form{
+        max-width:100%;
+        width:100%;
+    }
+    #newsletter form .input-group{
+        width:100%;
+    }
+} 
+
+@media (max-width:575px){
+    .custom-navbar .form-inline .custom-form-control{
+        width:80%;
+    }
+    .custom-navbar .form-inline .search-btn{
+        width:20%;
+    }
+    #footer #brand-logos .img-container img{
+        margin:5px 15px;
+    }
 }
