--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,7 +28,7 @@ body{
     margin-left:30px;
     margin-top:4px;
 }
-.custom-btn,.custom-navbar .container  .custom-form-control{
+.custom-btn , .custom-navbar .container .custom-form-control{
     border: 1px solid #EBEBEB !important;
     box-shadow: none ;
     border-radius: 2px;
@@ -333,18 +333,18 @@ h3.custom-heading{
     margin-bottom:8px;
 }
 .custom-btn-primary{
-    color:#f8ad47;
-    border-color:#f8ad47;
-    background-color:transparent;
+    color:#f8ad47 !important;
+    border-color:#f8ad47 !important;
+    background-color:transparent !important;
 }
 .custom-btn-primary:active,
 .custom-btn-primary:active:focus,
 .custom-btn-primary:active:hover,
 .custom-btn-primary:focus,
 .custom-btn-primary:hover{
-    color:#b86d07;
-    border-color:#b86d07;
-    background-color:transparent;
+    color:#b86d07 !important;
+    border-color:#b86d07 !important;
+    background-color:transparent !important;
 }
 .custom-panel .price, .custom-panel h4{
     font-size:130%;
@@ -429,7 +429,7 @@ input[type=email], input[type=number]{
 
 
 .btn-primary{
-    color:#212529;
+    color:#212529 !important;
     background-color:#f8ad47 !important;
     border-color:#f8ad47 !important;
 }
@@ -490,7 +490,146 @@ input[type=email], input[type=number]{
     margin-right:5px;
 }
 
+/************************************************
+*******************
+Product page
+*******************
+*************************************************/
+.custom-breadcrumb{
+    background-color:transparent !important;
+    padding:25px 0;
+}
+.custom-breadcrumb a{
+    color:#555;
+    text-decoration:none;
+}
+.custom-breadcrumb a:hover{
+    color:#f8ad47;
+}
+.custom-breadcrumb>li+li:before{
+    content:">";
+    color:#555;
+    padding:0 5px;
+}
+.custom-breadcrumb .active{
+    color:#bfbfbf;
+}
+#carousel-product-images .carousel-indicators{
+    position:relative;
+    top:-35px;
+    right:0 !important;
+}
+#carousel-product-images .carousel-item img{
+    border:1px solid #ebebeb;
+    width:100%;
+}
+.block-100{
+    width:100%;
+    display:block;
+}
+.product-category{
+    color:#a9a9a9;
+}
+#form-product-selection h2{
+    font-size:30px;
+    font-weight:700;
+    margin:18px 0;
+}
+.price.large{
+    font-size:30px;
+    margin-top:20px;
+}
+.borders-between>div+div{
+    border-top:1px solid #ebebeb;
+    padding-top:15px;
+    padding-bottom:15px;
+}
+.product-option{
+    display:inline-block;
+    height:23px;
+    width:23px;
+    border:1px solid #ebebeb;
+    text-align:center;
+    color:#c2c2c2;
+    margin:3px 3px 9px;
+}
+.product-option input{
+    display:none;
+}
+.product-option label{
+    font-weight:700;
+    display:inline-block;
+}
+.product-option.active{
+    color:#f8ad47;
+    border-color:#f8ad47;
+}
+.color-option.active{
+    border-color:#fff;
+    outline:1px solid #000;
+}
+.product-quantity select{
+    width:56px;
+    height:34px!important;
+    padding:6px 12px;
+    margin-right:3px;
+}
+.product-quantity .label{
+    padding-top:10px;
+}
+.product-quantity{
+    padding-bottom:20px;
+}
+.custom-btn-with-icon{
+    margin-top:15px;
+    margin-bottom:10px;
+    font-size:18px;
+    padding:5px 10px 5px 10px;
+}
+.heading-with-border-bottom{
+    border-bottom:2px solid #ebebeb;
+    padding-bottom:15px;
+}
+.heading-inline{
+    display:inline-block;
+    min-width:250px;
+}
+.more-description p ,.more-description ul{
+    margin-bottom:10px;
+}
+.comments .media{
+    margin:15px;
+}
+.comments .media:first-child{
+    margin-top:0;
+}
+.comments .media img{
+    width:80px;
+    height:80px;
+    margin-left:10px;
+    border:1px solid #dfdfdf;
+}
+.comments .media .media-heading{
+    font-size:18px;
+    margin-bottom:5px;
+}
+.suggestions .custom-thumbnail{
+    margin-right:-8px;
+    margin-left:-8px;
+}
 
+
+
+
+
+
+
+
+/************************************************
+*******************
+Media Query
+*******************
+*************************************************/
 @media (max-width:1200px){
     .custom-navbar .navbar-nav li a.nav-link{
         padding: 7px;
@@ -568,6 +707,26 @@ input[type=email], input[type=number]{
         font-size:150%;
         margin-top:10px;
     }
+
+    /* Product page */
+    .product-option{
+        width:40px;
+        height:40px;
+        margin:10px;
+        line-height:40px;
+        font-size:20px;
+    }
+    .custom-list-group{
+        border-bottom:0 solid #ebebeb;
+    }
+    #search-pagination{
+        display:flex;
+        align-items:center;
+        justify-content:center;
+    }
+    #form-subscription{
+        margin-bottom:40px;
+    }
 }
 
 @media (max-width:991px) and (min-width:768px){
@@ -605,6 +764,9 @@ input[type=email], input[type=number]{
     #newsletter form .input-group{
         width:100%;
     }
+    .hide-on-small{
+        display:none;
+    }
 } 
 
 @media (max-width:575px){
@@ -616,5 +778,9 @@ input[type=email], input[type=number]{
     }
     #footer #brand-logos .img-container img{
         margin:5px 15px;
+    }
+    #form-product-selection,.comments{
+        padding-left:15px;
+        padding-right:15px;
     }
 }
