--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,7 +31,7 @@ body{
 .custom-btn ,.custom-form-control{
     border: 1px solid #EBEBEB;
     box-shadow: none;
-    border-radius: 2px;
+    border-radius: 2px !important;
     font-size: 14px;
     transition: all 0.3s ease;
     padding: 6px 16px 7px 16px;
@@ -727,6 +727,142 @@ payment page
 
 
 
+/************************************************
+*******************
+search page
+*******************
+*************************************************/
+.row{
+    align-items: baseline;
+}
+#form-advanced-search{
+    border:1px solid #ebebeb;
+    padding-bottom:20px;
+    margin-bottom:35px;
+    display:table;
+}
+#form-advanced-search .custom-panel{
+    border:none;
+    padding:5px;
+}
+.custom-panel .card-header{
+    background-color:transparent;
+    margin-bottom:15px;
+    padding:7px 10px 13px;
+}
+.custom-list-group>.list-group-item{
+    border:none;
+    padding:0 10px 14px 0;
+}
+.custom-list-group>.list-group-item:last-child{
+    padding:0 10px 0 0;
+}
+.custom-list-group{
+    border-bottom:1px solid #ebebeb;
+}
+#form-advanced-search label{
+    cursor:pointer;
+    font-weight:700;
+}
+.ui-slider{
+    margin:25px 0 15px!important;
+    height:2px!important;
+    background:#c5c5c5!important;
+}
+.ui-slider .ui-slider-handle{
+    background-color:#f8ad47!important;
+    border:none!important;
+    border-radius:50%;
+    height:12px!important;
+    width:12px!important;
+    top:-6px!important;
+}
+.ui-slider .ui-slider-range{
+    border:1px solid #f8ad47!important;
+    top:-1px!important;
+}
+.custom-pagination li a{
+    border:1px solid #ebebeb;
+    width:32px;
+    height:32px;
+    line-height:32px;
+    margin-right:3px;
+    margin-left:3px;
+    color:#c2c2c2;
+    display:inline-block;
+    text-align:center;
+    transition:all .3s ease;
+}
+.custom-pagination li.active a{
+    background-color:#f8ad47;
+    color:#fff;
+    border-color:#f8ad47;
+}
+.custom-pagination li a:active,
+.custom-pagination li a:focus,
+.custom-pagination li a:hover{
+    color:#ab7731;
+    border-color:#ab7731;
+}
+.custom-pagination{
+    margin:25px 0;
+}
+#search-results .custom-thumbnail{
+    margin-right:-8px;
+    margin-left:-8px;
+}
+#search-results h3.heading-with-border-bottom{
+    margin-top:0;
+}
+
+
+
+
+
+
+
+
+
+/************************************************
+*******************
+search page
+*******************
+*************************************************/
+#map{
+    padding:0;
+}
+#contact-options h4{
+    font-size:18px;
+    padding-bottom:12px;
+}
+#contact-options .heading-with-border-bottom{
+    margin-bottom:15px;
+}
+#contact-info{
+    margin-bottom:25px;
+}
+#contact-info .fa-lg{
+    color:#f3af41;
+    font-size:18px;
+    margin:10px;
+    width:25px;
+    text-align:center;
+}
+#contact-options textarea{
+    height:128px!important;
+}
+#contact-options{
+    margin-bottom:25px;
+}
+
+
+
+
+
+
+
+
+
 
 
 
@@ -821,6 +957,12 @@ Media Query
         line-height:40px;
         font-size:20px;
     }
+    /* search page */
+    .ui-slider .ui-slider-handle{
+        height:20px;
+        width:20px;
+        top:-10px;
+    }
     .custom-list-group{
         border-bottom:0 solid #ebebeb;
     }
@@ -829,6 +971,7 @@ Media Query
         align-items:center;
         justify-content:center;
     }
+    /* contact page */
     #form-subscription{
         margin-bottom:40px;
     }
